SubBt/force-app/main/default/objects/Menu_Content__c/Menu_Content__c.object-meta.xml
<CustomObject>
    <label>Menu Content</label>
    <nameField>
        <label>Menu Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu Contents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>