SubBt/force-app/main/default/objects/Menu_Content__c/fields/Heading__c.field-meta.xml
<CustomField>
    <fullName>Heading__c</fullName>
    <label>Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>