SubBt/force-app/main/default/objects/Menu_Content__c/fields/Menu__c.field-meta.xml
<CustomField>
    <fullName>Menu__c</fullName>
    <label>Menu</label>
    <referenceTo>Menu__c</referenceTo>
    <relationshipLabel>Menu Contents</relationshipLabel>
    <relationshipName>Menu_Contents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>